Added all recipe pages and image files

--- a/recipes/cranberrypecan.html
+++ b/recipes/cranberrypecan.html
@@ -6,13 +6,13 @@
     <title>Odin Project | Recipes | Sourdoughs</title>
 </head>
 <body>
-    <h1>Basic Sourdough</h1>
-    <img src="../resources/images/basicsourdough.png" height=331 width=396>
+    <h1>Cranberry Pecan Sourdough</h1>
+    <img src="../resources/images/cranberrypecansourdough.png" height=386 width=409>
     <ul>Ingredients
         <li>50g bubbly, active starter</li>
-        <li>350g warm water</li>
-        <li>500g bread flour</li>
-        <li>9g fine sea salt</li>
+        <li>Xg warm water</li>
+        <li>Xg bread flour</li>
+        <li>Xg fine sea salt</li>
     </ul>
 
     <ol>Process
@@ -21,7 +21,7 @@
         <li>Cover with damp towel and let rest for 30 minutes</li>
         <li>Work dough into smooth ball by folding outside edge into center and repeating all the way around</li>
         <li>Cover bowl with damp towel and let rise overnight at room temperature</li>
-        <li>Dump dough onto lightly floured surface for shaping</li>
+        <li>Dump dough onto lightly floured surface for shaping and incorporating extras</li>
         <li>Flip dough and let rest for 5-10 minutes</li>
         <li>Halfway there...</li>
     </ol>
