--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/sourdough.html">Basic sourdough</a></li>
+        <li><a href="recipes/cranberrypecan.html">Cranberry Pecan sourdough</a></li>
+        <li><a href="recipes/datepecan.html">Date Pecan sourdough</a></li>
+        <li><a href="recipes/cinnamonraisin.html">Cinnamon Raisin</a></li>
+    </ul>
 </body>
 </html>
