Add link back to index from each recipe page

--- a/recipes/cinnamonraisin.html
+++ b/recipes/cinnamonraisin.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Project | Recipes | Sourdoughs</title>
+    <title>Odin Project | Recipes | Sourdoughs | Cinnamon Raisin</title>
 </head>
 <body>
-    <h1>Date Pecan Sourdough</h1>
-    <img src="../resources/images/cinnamonraisin.png" height=276 width=187>
+    <h1><a href="../index.html">Odin Recipes - Sourdoughs index</a></h1>
+    <h2>Cinnamon Raisin Sourdough</h2>
+    <img src="../resources/images/cinnamonraisin.png" alt="loaf of cinnamon raisin sourdough bread" height=276 width=187>
     <ul>Ingredients
         <li>50g bubbly, active starter</li>
         <li>Xg warm water</li>
