--- a/recipes/datepecan.html
+++ b/recipes/datepecan.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Project | Recipes | Sourdoughs</title>
+    <title>Odin Project | Recipes | Sourdoughs | Date Pecan</title>
 </head>
 <body>
-    <h1>Date Pecan Sourdough</h1>
-    <img src="../resources/images/datepecansourdough.png" height=386 width=409>
+    <h1><a href="../index.html">Odin Recipes - Sourdoughs index</a></h1>
+    <h2>Date Pecan Sourdough</h2>
+    <img src="../resources/images/datepecansourdough.png" alt="loaf of date pecan sourdough bread" height=386 width=409>
     <ul>Ingredients
         <li>50g bubbly, active starter</li>
         <li>Xg warm water</li>
