--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Project | Recipes | Sourdoughs</title>
+    <title>Odin Project | Recipes | Sourdoughs | Basic Loaf</title>
 </head>
 <body>
+    <h1><a href="../index.html">Odin Recipes - Sourdoughs index</a></h1>
     <h1>Basic Sourdough</h1>
-    <img src="../resources/images/basicsourdough.png" height=331 width=396>
+    <img src="../resources/images/basicsourdough.png" alt="loaf of basic sourdough bread" height=331 width=396>
     <ul>Ingredients
         <li>50g bubbly, active starter</li>
         <li>350g warm water</li>
