Remove links back to index page, not in assignment

--- a/recipes/cinnamonraisin.html
+++ b/recipes/cinnamonraisin.html
@@ -6,25 +6,43 @@
     <title>Odin Project | Recipes | Sourdoughs | Cinnamon Raisin</title>
 </head>
 <body>
-    <h1><a href="../index.html">Odin Recipes - Sourdoughs index</a></h1>
-    <h2>Cinnamon Raisin Sourdough</h2>
+    <h1>Cinnamon Raisin Sourdough</h1>
     <img src="../resources/images/cinnamonraisin.png" alt="loaf of cinnamon raisin sourdough bread" height=276 width=187>
     <ul>Ingredients
         <li>50g bubbly, active starter</li>
-        <li>Xg warm water</li>
-        <li>Xg bread flour</li>
-        <li>Xg fine sea salt</li>
+        <li>365g warm water</li>
+        <li>480g bread flour</li>
+        <li>20g whole wheat flour</li>
+        <li>9g fine sea salt</li>
+    </ul>
+    <ul>Fillings
+        <li>65g raisins</li>
+        <li>65g walnuts</li>
+        <li>50g sugar</li>
+        <li>6g cinnamon</li>
     </ul>
 
     <ol>Process
-        <li>Whisk starter and water together in large bowl with fork</li>
-        <li>Add flour and salt, combine until stiff dough forms</li>
-        <li>Cover with damp towel and let rest for 30 minutes</li>
-        <li>Work dough into smooth ball by folding outside edge into center and repeating all the way around</li>
-        <li>Cover bowl with damp towel and let rise overnight at room temperature</li>
-        <li>Dump dough onto lightly floured surface for shaping and incorporating extras</li>
-        <li>Flip dough and let rest for 5-10 minutes</li>
-        <li>Halfway there...</li>
+        <li>Whisk starter and water together in large bowl with a fork.</li>
+        <li>Add flour and salt, combine until stiff dough forms.</li>
+        <li>Cover with damp towel and let rest for 30 minutes to an hour.</li>
+        <li>While dough resting, soak raisins and walnuts in just enough warm water to cover. Drain well before use.</li>
+        <li>Add raisins and nuts to the bowl.</li>
+        <li>Gently knead fillings into dough to incorporate, about 1 minute.</li>
+        <li>Bulk rise - Cover the bowl with damp towel and let rise at room temperature until double in size. About 8-10 hours in 70 degrees.</li>
+        <li>Dump dough onto lightly floured surface and let rest for 10-15 minutes.</li>
+        <li>Line a 10-inch oval proofing basket with towel and dust with flour.</li>
+        <li>Combine sugar and cinnamon in a small bowl and set aside.</li>
+        <li>Gently stretch dough into long rectangle, lightly brush surface of dough with water.</li>
+        <li>Evenly sprinkle cinnamon-sugar mixture over the top, leaving 2-inch border top and bottom, and 1-inch border around sides.</li>
+        <li>With short end facing you, roll dough into a log, pinching ends to seal. Place in basket, seam side up.</li>
+        <li>Second rise - Cover dough and let rest 30 minutes to 1 hour.</li>
+        <li>Preheat oven to 450 degrees and cut parchment paper to fit baking pot.</li>
+        <li>Place parchment over dough and turn basket to release onto paper.</li>
+        <li>Make 2-3 diagonal shallow cuts (scores) into surface of dough with small knife.</li>
+        <li>Transfer into baking pot.</li>
+        <li>Bake covered for 20 minutes, then uncovered for 40 minutes.</li>
+        <li>Remove loaf to wire rack and cool for 1 hour before slicing.</li>
     </ol>
 </body>
 </html>
