Finish adding recipes

--- a/recipes/cinnamonraisin.html
+++ b/recipes/cinnamonraisin.html
@@ -29,14 +29,14 @@
         <li>While dough resting, soak raisins and walnuts in just enough warm water to cover. Drain well before use.</li>
         <li>Add raisins and nuts to the bowl.</li>
         <li>Gently knead fillings into dough to incorporate, about 1 minute.</li>
-        <li>Bulk rise - Cover the bowl with damp towel and let rise at room temperature until double in size. About 8-10 hours in 70 degrees.</li>
+        <li><b>Bulk rise</b> - Cover the bowl with damp towel and let rise at room temperature until double in size. About 8-10 hours in 70 degrees.</li>
         <li>Dump dough onto lightly floured surface and let rest for 10-15 minutes.</li>
         <li>Line a 10-inch oval proofing basket with towel and dust with flour.</li>
         <li>Combine sugar and cinnamon in a small bowl and set aside.</li>
         <li>Gently stretch dough into long rectangle, lightly brush surface of dough with water.</li>
         <li>Evenly sprinkle cinnamon-sugar mixture over the top, leaving 2-inch border top and bottom, and 1-inch border around sides.</li>
         <li>With short end facing you, roll dough into a log, pinching ends to seal. Place in basket, seam side up.</li>
-        <li>Second rise - Cover dough and let rest 30 minutes to 1 hour.</li>
+        <li><b>Second rise</b> - Cover dough and let rest 30 minutes to 1 hour.</li>
         <li>Preheat oven to 450 degrees and cut parchment paper to fit baking pot.</li>
         <li>Place parchment over dough and turn basket to release onto paper.</li>
         <li>Make 2-3 diagonal shallow cuts (scores) into surface of dough with small knife.</li>
