--- a/recipes/datepecan.html
+++ b/recipes/datepecan.html
@@ -9,21 +9,33 @@
     <h1>Date Pecan Sourdough</h1>
     <img src="../resources/images/datepecansourdough.png" alt="loaf of date pecan sourdough bread" height=386 width=409>
     <ul>Ingredients
-        <li>50g bubbly, active starter</li>
-        <li>Xg warm water</li>
-        <li>Xg bread flour</li>
-        <li>Xg fine sea salt</li>
+        <li>113g starter</li>
+        <li>282g warm water</li>
+        <li>180g all-purpose flour</li>
+        <li>120g bread flour</li>
+        <li>60g whole wheat flour</li>
+        <li>9g fine sea salt</li>
     </ul>
-
+    <ul>Fillings
+        <li>60g toasted pecans - roughly chopped</li>
+        <li>140g medjool dates - roughly chopped</li>
+    </ul>
     <ol>Process
-        <li>Whisk starter and water together in large bowl with fork</li>
-        <li>Add flour and salt, combine until stiff dough forms</li>
-        <li>Cover with damp towel and let rest for 30 minutes</li>
-        <li>Work dough into smooth ball by folding outside edge into center and repeating all the way around</li>
-        <li>Cover bowl with damp towel and let rise overnight at room temperature</li>
-        <li>Dump dough onto lightly floured surface for shaping and incorporating extras</li>
-        <li>Flip dough and let rest for 5-10 minutes</li>
-        <li>Halfway there...</li>
-    </ol>
+        <li>Whisk flours and water together in large bowl with a fork.</li>
+        <li>Let rest 30 minutes to 1 hour.</li>
+        <li>Fold in starter and salt, combine until stiff dough forms.</li>
+        <li>Let rest 30 minutes in warm place.</li>
+        <li><b>Lamination</b> - Gently stretch dough into long rectangle, lightly brush surface of dough with water.</li>
+        <li>Evenly sprinkle 3/4 pecans and dates over the top, fold dough up and sprinkle remaining pecans and dates.</li>
+        <li>With short end facing you, roll dough into a log, pinching ends to seal. Place in basket, seam side up.</li>
+        <li><b>Coil folds</b>Perform 3 sets of coil folds 30 minutes apart.</li>
+        <li>Cover dough and let rest 1.5 hours.</li>
+        <li>Place parchment over dough and turn basket to release onto paper.</li>
+        <li><b>Cold fermentation</b> - Cover dough and store in refrigerator overnight.</li>
+        <li>Preheat dutch oven in oven for 30 minutes at 500 degrees</li>
+        <li>Make 2-3 diagonal shallow cuts (scores) into surface of dough with small knife.</li>
+        <li>Transfer into baking pot.</li>
+        <li>Bake covered for 25-30 minutes at <b>450 degrees</b>, then uncovered for 10-15 minutes.</li>
+        <li>Remove loaf to wire rack and cool for 1 hour before slicing.</li>
 </body>
 </html>
