--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -16,14 +16,22 @@
     </ul>
 
     <ol>Process
-        <li>Whisk starter and water together in large bowl with fork</li>
-        <li>Add flour and salt, combine until stiff dough forms</li>
-        <li>Cover with damp towel and let rest for 30 minutes</li>
-        <li>Work dough into smooth ball by folding outside edge into center and repeating all the way around</li>
-        <li>Cover bowl with damp towel and let rise overnight at room temperature</li>
-        <li>Dump dough onto lightly floured surface for shaping</li>
+        <li>Whisk starter and water together in large bowl with fork.</li>
+        <li>Add flour and salt, combine until stiff dough forms.</li>
+        <li>Cover with damp towel and let rest for 30 minutes.</li>
+        <li>Work dough into smooth ball by folding outside edge into center and repeating all the way around.</li>
+        <li><b>Bulk rise</b> - Cover bowl with damp towel and let rise overnight at room temperature.</li>
+        <li>Dump dough onto lightly floured surface and shape.</li>
         <li>Flip dough and let rest for 5-10 minutes</li>
-        <li>Halfway there...</li>
+        <li>Place dough into bowl seam side up.</li>
+        <li><b>Second rise</b> - Cover bowl and let rest for 30 minutes to 1 hour.</li>
+        <li>Preheat oven to 450 degrees and cut parchment paper to fit baking pot.</li>
+        <li>Place paper over dough and invert bowl to release dough.</li>
+        <li>Score surface of dough in cross-hatch pattern with small knife.</li>
+        <li>Transfer to baking pot.</li>
+        <li>Bake on center rack for 20 minutes covered, then 30 minutes uncovered.</li>
+        <li>Remove loaf from baking pot and bake directly on oven rack for 10 minutes to crisp crust.</li>
+        <li>Transfer to wire rack and cool for 1 hour before slicing.</li>
     </ol>
 </body>
 </html>
