--- a/recipes/cranberrypecan.html
+++ b/recipes/cranberrypecan.html
@@ -8,22 +8,38 @@
 <body>
     <h1>Cranberry Pecan Sourdough</h1>
     <img src="../resources/images/cranberrypecansourdough.png" alt="loaf of cranberry pecan sourdough bread" height=386 width=409>
-    <ul>Ingredients
-        <li>50g bubbly, active starter</li>
-        <li>Xg warm water</li>
-        <li>Xg bread flour</li>
-        <li>Xg fine sea salt</li>
+    <ul>Levain - mix 3-4 hours before bake
+        <li>35g starter</li>
+        <li>35g warm water</li>
+        <li>35g bread flour</li>
     </ul>
-
+    <ul>Ingredients
+        <li>100g ripe levain</li>
+        <li>375g warm water</li>
+        <li>500g white bread flour</li>
+        <li>10g fine sea salt</li>
+    </ul>
+    <ul>Fillings
+        <li>75g pecans - roughly chopped</li>
+        <li>90g craisins</li>
+    </ul>
     <ol>Process
-        <li>Whisk starter and water together in large bowl with fork</li>
-        <li>Add flour and salt, combine until stiff dough forms</li>
-        <li>Cover with damp towel and let rest for 30 minutes</li>
-        <li>Work dough into smooth ball by folding outside edge into center and repeating all the way around</li>
-        <li>Cover bowl with damp towel and let rise overnight at room temperature</li>
-        <li>Dump dough onto lightly floured surface for shaping and incorporating extras</li>
-        <li>Flip dough and let rest for 5-10 minutes</li>
-        <li>Halfway there...</li>
+        <li>Whisk levain and water together in large bowl with a fork.</li>
+        <li>Add flour and salt, combine until stiff dough forms.</li>
+        <li><b>Bulk rise, part 1</b> - Cover the bowl with damp towel and let rise at room temperature for 3.5 hours.</li>
+        <li>Dump dough onto lightly floured surface.</li>
+        <li>Line a 10-inch oval proofing basket with towel and dust with flour.</li>
+        <li><b>Lamination</b> - Gently stretch dough into long rectangle, lightly brush surface of dough with water.</li>
+        <li>Evenly sprinkle 3/4 pecans and craisin mixture over the top, fold dough up and sprinkle remaining pecans and craisins.</li>
+        <li>With short end facing you, roll dough into a log, pinching ends to seal. Place in basket, seam side up.</li>
+        <li><b>Bulk rise, part 2</b> - Cover dough and let rest 1.5 hours.</li>
+        <li>Place parchment over dough and turn basket to release onto paper.</li>
+        <li><b>Cold fermentation</b> - Cover dough and store in refrigerator overnight.</li>
+        <li>Preheat dutch oven in oven for 30 minutes at 500 degrees</li>
+        <li>Make 2-3 diagonal shallow cuts (scores) into surface of dough with small knife.</li>
+        <li>Transfer into baking pot.</li>
+        <li>Bake covered for 25 minutes at <b>450 degrees</b>, then uncovered for 20 minutes.</li>
+        <li>Remove loaf to wire rack and cool for 1 hour before slicing.</li>
     </ol>
 </body>
 </html>
