--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>Sourdough bread is <b>awesome</b>! Healthy, with almost unlimited potential for add-ins, it isn't quite as easy as buying bread at the store. But much more fun!</p>
     <ul>
         <li><a href="recipes/sourdough.html">Basic sourdough</a></li>
         <li><a href="recipes/cranberrypecan.html">Cranberry Pecan sourdough</a></li>
