Add title to recipe list

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <p>Sourdough bread is <b>awesome</b>! Healthy, with almost unlimited potential for add-ins, it isn't quite as easy as buying bread at the store. But much more fun!</p>
-    <ul>
+    <ul>Sample of sourdough recipes:
         <li><a href="recipes/sourdough.html">Basic sourdough</a></li>
         <li><a href="recipes/cranberrypecan.html">Cranberry Pecan sourdough</a></li>
         <li><a href="recipes/datepecan.html">Date Pecan sourdough</a></li>
-        <li><a href="recipes/cinnamonraisin.html">Cinnamon Raisin</a></li>
+        <li><a href="recipes/cinnamonraisin.html">Cinnamon Raisin sourdough</a></li>
     </ul>
 </body>
 </html>
